--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,8 @@
 
-<div class="nav">
-    <h1 class="logo">LOGO WITH</h1>
-    <div>
-        <h1>Menu</h1>
-        <h1>Education</h1>
-        <h1>Community</h1>
-        <h1>Login</h1>
-    </div>
-</div>
+
 
 <div class="top-button" onclick="movetop()">
-    <img src="up.svg" alt="" style="width: 50px;height:50px;z-index:1000;">
+    <img src="assets/up.svg" alt="" style="width: 50px;height:50px;z-index:1000;">
     <h1 style="top:-5px; font-weight: 400; top:-16px; position:relative;">Top</h1>
 </div>
   
@@ -24,9 +16,9 @@
         여러분과 같은 사람을 만나고<br>
         서로 알아갈 수 있는 기회입니다!<br>
     </h2>
-    <img src="공감start.png" alt="" style="width: 350px;height: auto;margin-top:20px;cursor:pointer" onclick="movequiz()">
-    <img src="arrow.svg" alt="" style="width: 35px;height: 35px;fill:white;position:relative;top:-20px;">
-    <img src="arrow.svg" alt="" style="width: 35px;height: 35px;fill:white;position:relative;top: -35px;">
+    <img src="assets/공감start.png" alt="" style="width: 350px;height: auto;margin-top:20px;cursor:pointer" onclick="movequiz()">
+    <img src="assets/arrow.svg" alt="" style="width: 35px;height: 35px;fill:white;position:relative;top:-20px;">
+    <img src="assets/arrow.svg" alt="" style="width: 35px;height: 35px;fill:white;position:relative;top: -35px;">
 </div>
 
 <div class="main-2">
