--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,15 @@
   </head>
 
   <body>
+    <div class="nav">
+      <h1 class="logo">LOGO WITH</h1>
+      <div>
+          <h1>Menu</h1>
+          <h1>Education</h1>
+          <h1>Community</h1>
+          <h1>Login</h1>
+      </div>
+    </div>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
