--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -114,7 +114,7 @@
 </div>
       
 <div class="main-5">
-    <img src="left.svg" alt="" style="width:50px; height:50px; transform:rotate(180deg); margin-left:20px;">
+    <img src="/assets/left.svg" alt="" style="width:50px; height:50px; transform:rotate(180deg); margin-left:20px;">
     <div class="main-5-container">  
         <div>
             <h2 style="color:white;">가장 핫한 성교글 총정리!</h2>
@@ -132,11 +132,11 @@
                             <h1>Jang Young Jae</h1>
                             <div style="display:flex; flex-direction:row; align-items:center;">
                                 <h1>10시간 전</h1>
-                                <img src="earth.svg" alt="" style="width:15px; height:15px; margin-left:6px; position:relative; top:2px;">
+                                <img src="/assets/earth.svg" alt="" style="width:15px; height:15px; margin-left:6px; position:relative; top:2px;">
                             </div>   
                         </div>
                     </div>
-                    <img src="3dot.svg" alt="" class="dot">
+                    <img src="/assets/3dot.svg" alt="" class="dot">
                 </div>
                 <h1 class="post-content">Excellent!Excllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellent!</h1>
             </div>
@@ -175,7 +175,7 @@
             </div>
             </div>
         </div>    
-    <img src="left.svg" alt="" style="width:50px; height:50px; margin-right:20px;">
+    <img src="/assets/left.svg" alt="" style="width:50px; height:50px; margin-right:20px;">
 </div>
 
 <div class="main-6">
@@ -198,6 +198,16 @@
     }
 </script>
 
+<script>
+    (function($){
+        $(window).on("load",function(){
+            $(".post-content").mCustomScrollbar({
+                axis: "y",
+                theme: "dark-3"
+            });
+        });
+    })(jQuery);
+</script>
 
 <!-->
 <h1>메인 페이지</h1>
