--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -377,52 +377,45 @@ p, h1, h2, h3, h4 {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: #174246;
-   
-
+    background-image: url("main-5-back");
 }
 
 .main-5-container {
-   
     width: 95%;
     height: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-   
 }
 
 .main-5-container-post-box {
-    width: 70%;
+    width: 60%;
     margin-top: 50px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-
 }
 
 .main-5-container-post {
     box-shadow: 5px 7px 20px #2929293d;
-    width: 500px;
-    height:600px;
+    width: 400px;
+    height:500px;
     background-color: rgb(255, 255, 255);
     border-radius: 4px;
-    padding: 15px;
+    padding: 10px 9px 15px 15px;
     box-sizing: border-box;
     color: black;
     display: flex;
     flex-direction: column;
-    word-break:break-all; 
-      
+    word-break:break-all;
 }
 
-.post-title {
-    margin-bottom: 5px;      
+.post-title { 
     display: flex;
     height: 50px;
-    padding-bottom:15px;
+    padding-bottom:3px;
     align-items: center;
     justify-content: space-between;     
 }
@@ -450,30 +443,33 @@ p, h1, h2, h3, h4 {
     font-size: 25px;
     text-overflow: ellipsis;
     width: 100%;
-    padding: 0 15px 0 15px;
     box-sizing:border-box;
-    overflow-y: scroll;
+    overflow: hidden;
     white-space:initial;
 }
+/*여기는 잠시 mCustomScrollbar*/
+#mCSB_1_container {
+    margin-right: 20px;
+}
+/*여기까지ㅏ*/
 
 .main-5-container-comment {
-    height: 600px;
+    height: 500px;
 }
 
 .comment-box {
-    width: 570px;
+    width: 500px;
     min-height: 50px;
     background-color: #ffffff;
     border-radius: 4px;
-     color: black;
-     display: flex;
-     flex-direction: row;
-     padding:10px;
-     box-sizing: border-box;
-     margin-bottom: 30px;
-     box-shadow: 5px 7px 20px #2929293d;
-     cursor: pointer;
-     height: 150px;
+    color: black;
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    box-sizing: border-box;
+    margin-bottom: 30px;
+    box-shadow: 5px 7px 20px #2929293d;
+    cursor: pointer;
 }
 
 .comment {
