--- a/app/assets/stylesheets/qna.scss
+++ b/app/assets/stylesheets/qna.scss
@@ -26,17 +26,22 @@
 }
 
 .quiz-2 {
-    width: 500%;
+    width: 100%;
     height: 100%;
-    display: flex;
-    align-items: center;
     position: relative;
-    
 }
 
 .quiz-2-container {
+    padding-left: 20%; 
+    width: 1000%;
+    height: 100%;
+    position:absolute;
+    display:flex;
+    align-items: center;
+}
+.quiz-2-container-content {
     position: relative;
-    width: 20%;
+    align-items: center;
     height: 100%;
     float: left;
     display: flex;
@@ -45,39 +50,27 @@
     align-items:  center;
 }
 
-.quiz-2-container::before {
-    content: '';
-    display: block;
-    width:100%;
-    height: 100%;
-    // background-image: url("빗금.png");
-    background-size: 30% auto;
-    z-index:-2;
-    position:absolute;
-}
-
-.quiz-2-container-box {
-    margin: 5% 0 2.0% 0;
-    width:50%;
-    height: 57%;
+.quiz-2-container-content-box {
+    width: 80%;
+    height: 60%;
     background-color: rgb(255, 242, 65);
     box-shadow: 5px 7px 20px #2929293d;
     position:relative;
+    margin-top:10%;
 }
 
-.quiz-2-container-box::after {
-    content: '01';
+.quiz-2-container-content-box::after {
     display: block;
     text-align: center;
-    padding-top: 6px;
+    padding-top: 3px;
     position: absolute;
     font-size: 18px;
     border-radius: 50%;
     font-weight: 500;
     color: white;
-    width: 80px;
-    height: 80px;
-    top: -35px;
+    width: 55px;
+    height: 50px;
+    top: -32px;
     left: 45%;
     z-index: -1;
     background-color:rgb(180, 39, 39);
@@ -90,6 +83,7 @@
 
 .quiz-2-container-answer {
     width: 100%;
+    margin-top: 3%;
     height: 10%;
     display: flex;
     flex-direction: row;
@@ -102,7 +96,7 @@
 .yes, .no {
     box-shadow: 5px 7px 20px #2929293d;
     border-radius: 50px;
-    width: 18%;
+    width: 30%;
     height: 100%;
     font-size: 8px;
     display: flex;
