--- a/app/views/home/qna.html.erb
+++ b/app/views/home/qna.html.erb
@@ -4,8 +4,8 @@
         <button onclick="startMove()" style="margin-top: 500px">Start!</button>
     </div>
     <div class="quiz-2">
-        <img class="quiz-left" src="/assets/arrow3.svg" style="width:70px;height:70px;transform:rotate(90deg);position:absolute;z-index:999;left:19%;top:50%;display:none;" onclick="leftMove()">
-        <img class="quiz-right" src="/assets/arrow3.svg" style="width:70px;height:70px;transform:rotate(270deg);position:absolute;z-index:999;left: 77%;top:50%;" onclick="rightMove()">
+        <img class="quiz-left" src="/assets/arrow3.svg" style="width:40px;height:40px;transform:rotate(90deg);position:absolute;z-index:999;left:19%;top:50%;display:none;" onclick="leftMove()">
+        <img class="quiz-right" src="/assets/arrow3.svg" style="width:40px;height:40px;transform:rotate(270deg);position:absolute;z-index:999;left: 77%;top:50%;" onclick="rightMove()">
         <div class="quiz-2-container">
         <%i = 0%>
         <%while i < 15 do%>
@@ -47,6 +47,7 @@
 
     var scroll = $("body").width()*0.6;
     $(".quiz-2-container-content").css({"width": `${scroll}`});
+    $("body").css({"overflow": "hidden"});
     var quiz_number=1;
 
     function startMove() {
@@ -63,7 +64,7 @@
         }
         if (quiz_number > 1) {
             quiz_number-=1
-            $('.quiz-2-container').animate({left : `+=${scroll}`}, 400);
+            $('.quiz-2-container').animate({left : `+=${scroll}`}, 600);
         }
     
     }
@@ -77,7 +78,7 @@
         }
         if (quiz_number < 15) {
             quiz_number +=1
-            $('.quiz-2-container').animate({left : `-=${scroll}`}, 400);
+            $('.quiz-2-container').animate({left : `-=${scroll}`}, 600);
         }
     }
     
