--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -102,9 +102,9 @@
 
 <div class="main-4">
     <div class="main-4-container">
-            <div class="main-4-container-circle">
+            <a class="main-4-container-circle" href="/home/qna">
                 
-            </div>
+            </a>
             <h1>나는 성지식을 얼마나 많이 알고 있을까?<br>테스트로 나의 '성진성'을 측정해보아요!</h1>
             <div class="main-4-container-explain">
                 <h1>자격 요건 | 성지식에 능통한 당신이라면!</h1>
