--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,11 @@
 
   <body>
     <div class="nav">
-      <h1 class="logo">LOGO WITH</h1>
+      <div class="logo">
+        <h1>Logo With</h1>
+        <h2>성 성 | 가르칠 교</h2>
+      </div>
+      <h1 class="logo-1">性 敎</h1>
       <div class="nav-menu-box">
           <a class="nav-menu" href="/">
             <img src="/assets/main.svg">
@@ -23,11 +27,11 @@
             <img src="/assets/book.svg">
             <h1>Education</h1>
           </a>
-          <a class="nav-menu" href="/posts/index">
-            <img src="/assets/community1.svg" style="top:3px;height: 60px;">
-            <h1 style="top:-17px">Community</h1>
+          <a class="nav-menu" href="/posts/index" style="left:10px;">
+            <img src="/assets/community1.svg" style="top:3px;height: 70px;">
+            <h1 style="top:-21px">Community</h1>
           </a>
-           <a class="nav-menu" href="/posts/index">
+           <a class="nav-menu" href="/posts/index" style="left:10px;">
             <img src="/assets/counsel.svg" style="height:55px;">
             <h1 style="top:-14px">Counsel</h1>
           </a>
