--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -45,22 +45,41 @@ a {
 
 .logo {
     margin-left: 50px;
-    font-size: 30px;
+    display: flex;
+    align-items:  center;
+}
+
+.logo h1 {
+    
+    font-size: 40px;
+}
+
+.logo h2 {
+    font-size: 20px;
+    margin-left:10px;
+}
+
+.logo-1 {
+    position: relative;
+    left:15px;
 }
 
 .nav-menu-box {
-    width: 35%;
+    width: 23%;
     height:100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    margin-right: 10px;
+    margin-top: 10px;
+    position: relative;
+    left:-30px;
 }
 
 .nav-menu {
     height: 100%;
-    width: 25%;
+    position: relative;
+    width: 20%;
     display: flex;
     flex-direction: column;
     justify-content: center;
