--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,28 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+<div class="login-session">
+  <div class="login-session-error">
   <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
+  <div class="login-session-container">
+    <h2>Forgot your password?</h2>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      
+
+      <div class="field">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
+
+      
+        <%= f.submit "Send me reset password instructions!", :id => 'login-session-password-find'%>
+    
+    <% end %>
   </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  <div class="login-session-forget">
+    <%= render "devise/shared/links" %>
+  </div>
+   <div class="login-session-explain">
+        <h1>[ 성 교 ]</h1>
+        <h2>KU UNIVERSITY</h2>
+    </div>
+</div>
