--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -211,7 +211,7 @@ function toggle_comment() {
     $('.comment-box h1').css({'white-space': 'initial' })
 }
 
-$(window).load(function() {
+$(document).ready(function() {
 (function($){
     $(window).on("load",function(){
         $(".post-content").mCustomScrollbar({
@@ -221,6 +221,7 @@ $(window).load(function() {
     });
 })(jQuery);
 })
+
 
 
 </script>
