--- a/app/views/home/qna.html.erb
+++ b/app/views/home/qna.html.erb
@@ -1,7 +1,17 @@
 
 <div class="quiz-box">
     <div class="quiz-1 flex-column-center">
-        <button onclick="startMove()" style="margin-top: 500px">Start!</button>
+        <div class="dog">
+            <img src="/assets/dog.gif">
+        </div>
+        <div class="message">
+            <h1>성지식...</h1>
+            <h2>우리가 까맣게 몰랐던, 혹은 우리가 당연하게 생각하던,</h2>
+            
+            <h2>하지만 우리가 잘못알고 있던 성지식이 있지는 않을까?</h2>
+            
+        </div>
+        <button onclick="startMove()"><h1>Let's Start!</h1></button>
     </div>
     <div class="quiz-2">
         <img class="quiz-left" src="/assets/arrow3.svg" style="width:40px;height:40px;transform:rotate(90deg);position:absolute;z-index:999;left:19%;top:50%;display:none;" onclick="leftMove()">
@@ -52,7 +62,7 @@
 
     function startMove() {
         var offset = $(".quiz-2").offset();
-        $('html, body').animate({scrollTop : offset.top}, 800);
+        $('html, body').animate({top :  -$("body").height()*0.5}, 800);
     }
 
     function leftMove() {
