--- a/app/views/home/qna.html.erb
+++ b/app/views/home/qna.html.erb
@@ -5,10 +5,10 @@
             <img src="/assets/dog.gif">
         </div>
         <div class="message">
-            <h1>성지식...</h1>
-            <h2>우리가 까맣게 몰랐던, 혹은 우리가 당연하게 생각하던,</h2>
+            <h1>성지식 어디까지?</h1>
+            <h2>우리가 까맣게 몰랐던, 혹은 우리가 당연하게 생각했던,</h2>
             
-            <h2>하지만 우리가 잘못알고 있던 성지식이 있지는 않을까?</h2>
+            <h2>하지만 우리가 잘못알고 있는 성지식이 있지는 않을까?</h2>
             
         </div>
         <button onclick="startMove()"><h1>Let's Start!</h1></button>
