--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -5,8 +5,8 @@
 
 /*main-1*/
 .main-1 {
+    margin-top: 100px;
     position:  relative;
-
     width: 100%;
     height: 100%;
     display: flex;
@@ -18,6 +18,13 @@
     background: #954ba2 url("main-1-back.png") 50% 0 no-repeat
 }
 
+.main-1-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 700px;
+}
 .main-1 h1 {
     margin-top: 40px;
     font-size:  40px;
@@ -35,7 +42,7 @@
 }
 
 .main-1-title {
-    margin-top:100px;
+
     display: flex;
 
 }
@@ -219,12 +226,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .main-4-container h1 {
     text-align: center;
     font-size: 20px;
     color: white;
+   
 }
 
 .main-4-container-circle {
@@ -248,6 +257,18 @@
     50%{transform:rotate(0deg)}
     75%{transform:rotate(7deg)}
     100%{transform:rotate(0deg)}
+}
+
+.main-4-container::after {
+    content: '';
+    width: 200px;
+    height: 180px;
+    position:absolute;
+    top:6%;
+    left:56%;
+    background-image: url("click.png");
+    background-size: 100% auto;
+    background-repeat: no-repeat;
 }
 
 .main-4-container-circle h1 {
@@ -461,12 +482,4 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical; 
 }
-
-/*main-6 */
-.main-6 {
-    width:100%;
-    height: 100%;
-
-}
-
 
