--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,31 +3,24 @@
     <%= devise_error_messages! %>
   </div>
   <div class="login-session-container">
-    <h2 style="font-size:30px;">Sign up</h2>
+    <h2 style="font-size:4vh;">Sign up</h2>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-   
-
       <div class="field">
         <%= f.label :email %><br />
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
       </div>
-
-      <div class="field">
+      <div class="field" style="height:10vh">
         <%= f.label :password %>
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
         <%= f.password_field :password, autocomplete: "off" %>
       </div>
-
       <div class="field">
         <%= f.label :password_confirmation %><br />
         <%= f.password_field :password_confirmation, autocomplete: "off" %>
       </div>
-
-     
         <%= f.submit "Submit!" %>
-      
     <% end %>
   </div>
   <div class="login-session-forget">
@@ -38,3 +31,4 @@
       <h2>KU UNIVERSITY</h2>
   </div>
 </div>
+
