--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,18 +5,20 @@
 </div>
   
 <div class="main-1">
-    <div class="main-1-title">
-        <h1>성교</h1><h1 style="color: rgb(255, 255, 214)">할래</h1>
+    <div class="main-1-container">
+        <div class="main-1-title">
+            <h1>성교</h1><h1 style="color: rgb(255, 255, 214)">할래</h1>
+        </div>
+        <h1>그런적 있지 않아?</h1>
+        <h2>가끔씩 이렇지 않아? 나만 그래? 라고<br>
+            친구들과 성과 관련한 이야기를 하진 않나요?<br>
+            여러분과 같은 사람을 만나고<br>
+            서로 알아갈 수 있는 기회입니다!<br>
+        </h2>
+        <img src="assets/공감start.png" alt="" style="width: 350px;height: auto;margin-top:20px;cursor:pointer" onclick="movequiz()">
+        <img src="assets/arrow.svg" alt="" style="width: 35px;height: 35px;fill:white;position:relative;top:-20px;">
+        <img src="assets/arrow.svg" alt="" style="width: 35px;height: 35px;fill:white;position:relative;top: -35px;">
     </div>
-    <h1>그런적 있지 않아?</h1>
-    <h2>가끔씩 이렇지 않아? 나만 그래? 라고<br>
-        친구들과 성과 관련한 이야기를 하진 않나요?<br>
-        여러분과 같은 사람을 만나고<br>
-        서로 알아갈 수 있는 기회입니다!<br>
-    </h2>
-    <img src="assets/공감start.png" alt="" style="width: 350px;height: auto;margin-top:20px;cursor:pointer" onclick="movequiz()">
-    <img src="assets/arrow.svg" alt="" style="width: 35px;height: 35px;fill:white;position:relative;top:-20px;">
-    <img src="assets/arrow.svg" alt="" style="width: 35px;height: 35px;fill:white;position:relative;top: -35px;">
 </div>
 
 <div class="main-2">
@@ -199,6 +201,7 @@
 
 
 <script>
+
 
 function movetop() {
     $('html, body').animate({scrollTop : 0}, 900);
